--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/controller/VeiculoController.java=UTF-8
+encoding//src/persistence/VeiculoPersistence.java=UTF-8
